2005-12-22  Julien Puydt  <jpuydt@free.fr>

	* src/h323endpoint.h, src/h323endpoint.cpp: Renamed the variable
	'interface' to 'iface', since it confuses the compiler.

2005-12-21  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Change the look of the frame so that it looks 
	better with no theme.

	* src/pref_window.cpp: Code cleanup.

	* src/accounts.cpp: Use the new API. Only one H.323 account enabled 
	at the same time.

	* src/h323endpoint.cpp, src/h323endpoint.h: Added new functions for 
	GK management.

	* src/endpoint.cpp: Slight change due to the new API.
	
2005-12-21  Julien Puydt  <jpuydt@free.fr>

	* src/main_window.cpp: Replaced a gtk_widget_destroy by a
	gnomemeeting_threads_widget_destroy, to avoid a freeze under win32.

2005-12-20  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Remove non-standard Media Formats. 
	Only keep generic ones to simplify things for the user.

	* src/pref_window.cpp, src/pref_window.h: Display the short name of a 
	codec (Speex) instead of the long name (Speex-Narrow-11k). Store the 
	long form in the configuration. Display the sample rate.

2005-12-20  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Added -mwindows so we don't get a black DOS window on
	win32.

2005-12-20  Julien Puydt  <jpuydt@free.fr>

	* lib/winpaths.h, lib/winpaths.c, lib/toolbox/toolbox.h,
	lib/toolbox/toolbox-gnome.c, lib/toolbox/toolbox-gtk.c,
	lib/toolbox/toolbox-win32.c: Added missing copyright notice.

2005-12-20  Julien Puydt  <jpuydt@free.fr>

	* src/chat_window.cpp, src/druid.cpp, src/tools.cpp: Made use of the
	just committed toolbox.

2005-12-20  Julien Puydt  <jpuydt@free.fr>

	* lib/toolbox/Makefile.am, lib/toolbox/toolbox.h,
	lib/toolbox/toolbox-gtk.c, lib/toolbox/toolbox-gnome.c,
	lib/toolbox/toolbox-win32.c: Implementation of a system-agnostic
	function to open links.
	* lib/Makefile.am, configure.in: Compiled the toolbox in.

2005-12-20  Julien Puydt  <jpuydt@free.fr>
