@@ -1,5 +1,9 @@
 2005-12-22  Julien Puydt  <jpuydt@free.fr>
 
+	* src/main_window.cpp: Implemented option-parsing for win32.
+
+2005-12-22  Julien Puydt  <jpuydt@free.fr>
+
 	* src/h323endpoint.h, src/h323endpoint.cpp: Renamed the variable
 	'interface' to 'iface', since it confuses the compiler.
 
